# deepSculpt

./: .env.sample  .gitignore  .python-version  MANIFEST.in  Makefile  README.md  config.yaml  pyproject.toml  requirements.txt  setup.py  test.ipynb  test_pointcloud.html
boilerplate/: api.py  bot.py
deep-sculpt/: Sculptor.py  plotter.py  sculptor.py
deepSculpt/: bot.py  checkpoint.py  collector.py  data.py  decoder.py  encoder.py  main.py  model.py  models.py  optimizers.py  params.py  plotter.py  preprocessing.py  sculptor.py  shapes.py  snapshots.py  trainer.py  verbose.py  visualization.py  workflow.py
deepSculpt/api-interface/: fast.py
deepSculpt/borror/: data.py  mlflowbase.py  params.py  trainer.py
deepSculpt/collector/: collector.py
deepSculpt/components/: cantilever.py  edges.py  grid.py  planes.py  utils.py
deepSculpt/curator/: curator.py
deepSculpt/data/: checkpoint  color-raw-data[2022-06-14].npy  color-raw-data[2022-06-15].npy  model_at_epoch_0001-1.index  raw-data[2022-06-14].npy  (+1 more)
notebooks/: 3d-dcgan-tensorflow.ipynb  3d_dcgan_tensorflow.ipynb  animations.ipynb  generate-elements.ipynb  mesh_2.stl  run_colab.ipynb  test.ipynb  test_tomatplotlibstring.ipynb  testcomponents.ipynb  testprocessing.ipynb  testprocessingBINARY.ipynb  testprocessingOHE.ipynb  voxels.ipynb
output/: sculpture_pointcloud_20250312-094842.html  sculpture_pointcloud_20250313-123241.html
scripts/: deep-sculpt-run
tests/: conftest.py  test_api.py  test_bot.py  test_dataset_generation.py  test_e2e.py  test_main.py  test_models.py  test_trainer.py  test_workflow.py
(+95 files in other folders)
